# seele

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICEENSE.md  README.md  basename
ops/: default.conf  default.vcl  install-meilisearch.sh  start.sh
ops/setup/: Cargo.toml  meilisearch-macos-amd64
ops/setup/src/: main.rs
public/: index.html
src/: main.rs
src/controllers/: mod.rs
src/controllers/decoration/: mod.rs
src/controllers/graphql/: mod.rs
src/models/: mod.rs
src/models/graphql/: mod.rs
src/models/graphql/nhapi/: model.rs
src/models/graphql/nhentai/: constant.rs  mod.rs  model.rs  schema.rs  service.rs
src/models/graphql/nhql/: mod.rs  model.rs  schema.rs  service.rs  utils.rs
src/models/utils/: mod.rs
src/models/utils/numeric_non_zero_u32/: mod.rs
src/services/: mod.rs
src/services/request/: mod.rs
src/services/search/: mod.rs  models.rs  services.rs
