[package]
name = "seele"
version = "0.1.0"
authors = ["SaltyAom <aomkirby123@gmail.com>"]
edition = "2021"

[[bin]]
name = "seele"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.3"
actix-files = "0.6.2"

async-graphql = "4.0.15"
async-graphql-actix-web = "4.0.15"

serde = "1.0.145"
serde_json = "1.0.86"
serde-aux = "4.0.0"

reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "json"] }
cached = "0.39.0"
anyhow = "1.0.65"

tokio = { version = "1.21.2", features = ["fs"] }
futures = "0.3.24"
lazy_static = "1.4.0"

meilisearch-sdk = "0.20.1"
